2008-10-31  Satoshi Konno <skonno@cybergarage.org>
	* v2.3
	* Added UPnP/AV package in std/av as a sample implementation.
	* Added the following classes of Objective-C for MacOSX and iPhone
	  CGUpnpAvContainer
	  CGUpnpAvContentDirectory
	  CGUpnpAvContentManager
	  CGUpnpAvController
	  CGUpnpAvItem
	  CGUpnpAvObject
	  CGUpnpAvRenderer
	  CGUpnpAvResource
	  CGUpnpAvRoot
	  CGUpnpAvServer

2008-09-26 Satoshi Konno <skonno@cybergarage.org>
	* Fixed the following methods correctly
	  cg_upnp_device_setmanufacture() -> cg_upnp_device_setmanufacturer()
	  cg_upnp_device_getmanufacture() -> cg_upnp_device_getmanufacturer()
	  cg_upnp_device_setmanufactureurl() -> cg_upnp_device_setmanufacturerurl()
	  cg_upnp_device_getmanufactureurl() -> cg_upnp_device_getmanufacturerurl()
	* Fixed cg_net_uri_unescapestring() to compile normally on WIN32 platforms.
	* Changed to include <TargetConditionals.h> in <typedef.h> on XCode as default.
	* Enabled SO_REUSEPORT in cg_socket_setreuseaddress() on MacOSX and iPhone platforms.
	* Disabled signal in cg_thread_stop_with_cond() on MacOSX and iPhone platforms.
	* Enabled libxml2 as default using TARGET_OS_IPHONE macro on iPhone and iPhone-Simulator.
	* Added cg_xml_node_copy().
	* Changed cg_upnp_device_ssdpmessagereceived() to return the response more shortly.
	* Fixed cg_net_selectaddr() to get a correct address  on iPhone and iPhone-Simulator.

2008-08-21  Satoshi Konno <skonno@cybergarage.org>
	* Fixed some warnings using GCC v4.0.1.
	* Added the following macros.
	  cg_string_getintvalue()
	  cg_string_getlongvalue()
	  cg_xml_node_getintvalue()
	  cg_xml_node_getlongvalue()
	  cg_xml_node_getchildnodeintvalue()
	  cg_xml_node_getchildnodelongvalue()
	* Changed the following functions to return an integer value instead of a string.
	  cg_upnp_icon_getwidth()
	  cg_upnp_icon_getheight()
	  cg_upnp_icon_getdepth()
	
2008-06-06  Satoshi Konno <skonno@cybergarage.org>
	* v2.2.

2008-05-24  Satoshi Konno <skonno@cybergarage.org>